--- a/我命到底由谁.md
+++ b/我命到底由谁.md
@@ -42,7 +42,7 @@
 
 当我们直面这个现实的时候，我们就没有退路了，我们能做的只有两点：
 >**1.了解运气世界的规律，学习如何跟它打交道，掌握在其中生存的手段。
->2.扩大自己主观努力世界的范围，向右侧推进临界点。**
+2.扩大自己主观努力世界的范围，向右侧推进临界点。**
 
 其实第一点和第二点说的是同一件事，我们学习扩大主观世界范围的知识这件事本身就是在了解客观的运气世界运转的规律。当你学会如何跟它打交道，练就了在运气世界中生存手段的时候，那个别人眼中不可逾越的临界点就已经向右侧推进了一大段。
 
